<resources>
    <string name="app_name">BlueEye_V1.0</string>
    <string name="delete_warning">确定从本地设备中删除它？</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="platform_sina">新浪微博</string>
    <string name="platform_circle_friends">朋友圈</string>
    <string name="platform_we_chat">微信</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_qq_zone">QQ空间</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="resolution_ratio">分辨率</string>
    <string name="light">灯光</string>
    <string name="line_control">线控</string>
    <string name="waring_wifi_disconnect">无线网未连接</string>
    <string name="waring_wifi_know">知道了</string>
    <string name="waring_wifi_connect">点击连接</string>
</resources>