<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_action_button_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/back_action_item"
        android:gravity="center"
        android:textColor="#666666"
        android:textSize="17sp"
        android:letterSpacing="0.5"
        android:text="@string/share"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="#9e9e9e"/>

    <Button
        android:id="@+id/dialog_action_button_delete"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/back_action_item"
        android:gravity="center"
        android:textColor="#bf0505"
        android:textSize="17sp"
        android:letterSpacing="0.5"
        android:text="@string/delete"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10px"
        android:background="#ececec"/>

    <Button
        android:id="@+id/dialog_action_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/back_action_item"
        android:gravity="center"
        android:textColor="#666666"
        android:textSize="17sp"
        android:letterSpacing="0.5"
        android:text="@string/cancel"/>
</LinearLayout>