<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <!--标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#c4c4c4"
            android:textSize="15dp"
            android:text="@string/share_to" />
    </LinearLayout>

    <!--选择区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--新浪-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/share_sina"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_logo_sina" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/share_sina"
                android:textSize="12dp"
                android:text="@string/platform_sina" />
        </RelativeLayout>

        <!--朋友圈-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/share_circle_friends"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_logo_friends" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/share_circle_friends"
                android:textSize="12dp"
                android:text="@string/platform_circle_friends" />
        </RelativeLayout>

        <!--微信好友-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/share_we_chat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_logo_wechat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/share_we_chat"
                android:textSize="12dp"
                android:text="@string/platform_we_chat" />
        </RelativeLayout>

        <!--腾讯QQ-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/share_qq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_logo_qq" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/share_qq"
                android:textSize="12dp"
                android:text="@string/platform_qq" />
        </RelativeLayout>

        <!--腾讯QQ空间-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/share_qq_zone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/back_logo_qzone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/share_qq_zone"
                android:textSize="12dp"
                android:text="@string/platform_qq_zone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#c9c9c9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/share_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_text"
            android:textAlignment="center"
            android:textSize="17dp"
            android:letterSpacing="0.5"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>